[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/UIScenes/Assets/Level/BackGround.png" type="Texture" id=1]
[ext_resource path="res://Scenes/UIScenes/Assets/Buttons/blue_button03.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UIScenes/Assets/Buttons/blue_button05.png" type="Texture" id=3]
[ext_resource path="res://Scenes/UIScenes/Assets/Fonts/retro_gaming_10_OL.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/UIScenes/ItemMenu.gd" type="Script" id=5]
[ext_resource path="res://Scenes/UIScenes/Assets/Icons/Currency/weapon_ticket.png" type="Texture" id=6]
[ext_resource path="res://Scenes/UIScenes/Assets/Fonts/retro_gaming_6_OL.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scenes/UIScenes/Assets/Fonts/retro_gaming_7.tres" type="DynamicFont" id=9]
[ext_resource path="res://Scenes/UIScenes/Assets/Fonts/retro_gaming_5.tres" type="DynamicFont" id=10]

[node name="ItemMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="TopRow" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 20.0
rect_min_size = Vector2( 320, 20 )

[node name="ItemsText" type="Label" parent="TopRow"]
margin_right = 80.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 20 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 4 )
text = "Items"
align = 1
valign = 1

[node name="WeaponTicketsIcon" type="TextureRect" parent="TopRow"]
margin_left = 84.0
margin_top = 6.0
margin_right = 92.0
margin_bottom = 14.0
rect_min_size = Vector2( 8, 8 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 6 )
expand = true

[node name="WeaponTicketsDisplay" type="Label" parent="TopRow"]
margin_left = 96.0
margin_top = 6.0
margin_right = 146.0
margin_bottom = 14.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 7 )
valign = 1

[node name="TextureButton" type="TextureButton" parent="TopRow"]
visible = false
margin_left = 273.0
margin_top = 3.0
margin_right = 287.0
margin_bottom = 17.0
rect_min_size = Vector2( 14, 14 )
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="TextureButton2" type="TextureButton" parent="TopRow"]
visible = false
margin_left = 273.0
margin_top = 3.0
margin_right = 287.0
margin_bottom = 17.0
rect_min_size = Vector2( 14, 14 )
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="TextureButton3" type="TextureButton" parent="TopRow"]
visible = false
margin_left = 273.0
margin_top = 3.0
margin_right = 287.0
margin_bottom = 17.0
rect_min_size = Vector2( 14, 14 )
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="TextureButton4" type="TextureButton" parent="TopRow"]
visible = false
margin_left = 273.0
margin_top = 3.0
margin_right = 287.0
margin_bottom = 17.0
rect_min_size = Vector2( 14, 14 )
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="TextureButton5" type="TextureButton" parent="TopRow"]
visible = false
margin_left = 273.0
margin_top = 3.0
margin_right = 287.0
margin_bottom = 17.0
rect_min_size = Vector2( 14, 14 )
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Start" type="TextureButton" parent="TopRow"]
margin_left = 291.0
margin_top = 3.0
margin_right = 316.0
margin_bottom = 17.0
rect_min_size = Vector2( 25, 14 )
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="TopRow/Start"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
text = "Start"
align = 1
valign = 1

[node name="Control" type="Control" parent="TopRow"]
margin_left = 320.0
margin_right = 320.0
margin_bottom = 20.0

[node name="SideMenu" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
rect_min_size = Vector2( 30, 180 )

[node name="Control" type="Control" parent="SideMenu"]
margin_right = 30.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="StatsMenuButton" type="TextureButton" parent="SideMenu"]
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_top = 24.0
margin_right = 30.0
margin_bottom = 52.0
rect_min_size = Vector2( 30, 28 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 2 )
expand = true

[node name="StatsText" type="Label" parent="SideMenu/StatsMenuButton"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 9 )
text = "Stats"
align = 1
valign = 1

[node name="ItemMenuButton" type="TextureButton" parent="SideMenu"]
margin_top = 56.0
margin_right = 30.0
margin_bottom = 84.0
rect_min_size = Vector2( 30, 28 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 2 )
expand = true

[node name="ItemsText" type="Label" parent="SideMenu/ItemMenuButton"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 9 )
text = "Items"
align = 1
valign = 1

[node name="HeroMenuButton" type="TextureButton" parent="SideMenu"]
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_top = 88.0
margin_right = 30.0
margin_bottom = 116.0
rect_min_size = Vector2( 30, 28 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 2 )
expand = true

[node name="HeroesText" type="Label" parent="SideMenu/HeroMenuButton"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 7 )
text = "Heroes"
align = 1
valign = 1

[node name="TextureButton4" type="TextureButton" parent="SideMenu"]
visible = false
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_top = 88.0
margin_right = 30.0
margin_bottom = 116.0
rect_min_size = Vector2( 30, 28 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 2 )
expand = true

[node name="TextureButton5" type="TextureButton" parent="SideMenu"]
visible = false
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_top = 88.0
margin_right = 30.0
margin_bottom = 116.0
rect_min_size = Vector2( 30, 28 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 2 )
expand = true

[node name="ItemMenu" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -280.0
margin_top = -150.0
rect_min_size = Vector2( 280, 150 )
custom_constants/separation = 20

[node name="ItemMenuL" type="VBoxContainer" parent="ItemMenu"]
margin_bottom = 150.0
custom_constants/separation = 8

[node name="ItemMenuR" type="VBoxContainer" parent="ItemMenu"]
margin_left = 20.0
margin_right = 20.0
margin_bottom = 150.0
custom_constants/separation = 8

[connection signal="pressed" from="SideMenu/StatsMenuButton" to="." method="_on_StatsMenuButton_pressed"]
[connection signal="pressed" from="SideMenu/HeroMenuButton" to="." method="_on_HeroMenuButton_pressed"]
